# api/swagger/swagger.yaml
@@ -259,6 +259,46 @@ paths:
                 "500":
                     description: "Internal serveur Error"
 
+    /analyse/all:
+        get:
+            tags:
+                - analyse
+            summary: "Retourne les info des analyses"
+            description: "Retourne toutes les info des analyses auquel l'utlisateur courant a access"
+            responses:
+                "200":
+                    description: "Ok"
+                    content:
+                        application/json:
+                            schema:
+                                $ref: "analyse/get/responses/analyseAll.yaml"
+                "403":
+                    description: "Forbidden"
+                "401":
+                    description: "Unauthorized"
+                "500":
+                    description: "Internal serveur Error"
+
+    /analyse/saved:
+        get:
+            tags:
+                - analyse
+            summary: "Retourne les info des analyses sauvegarder"
+            description: "Retourne toutes les info des analyses sauvegarder auquel l'utlisateur courant a access"
+            responses:
+                "200":
+                    description: "Ok"
+                    content:
+                        application/json:
+                            schema:
+                                $ref: "analyse/get/responses/analyseSaved.yaml"
+                "403":
+                    description: "Forbidden"
+                "401":
+                    description: "Unauthorized"
+                "500":
+                    description: "Internal serveur Error"
+
 components:
     securitySchemes:
         ApiKeyAuth:
